<resources>
    <string name="app_name">MyCalc</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_point">.</string>
    <string name="_sum">+</string>
    <string name="_sub">-</string>
    <string name="_mult">×</string>
    <string name="_div">÷</string>
    <string name="_equals">=</string>
    <string name="_negative">±</string>
    <string name="_percent">%</string>
    <string name="_c">C</string>
    <string name="_back">⌫</string>
    <string name="themes">Themes</string>
    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="sky">Sky</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
</resources>