<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/themesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginThemesTitle"
        android:text="@string/themes"
        android:textSize="@dimen/themesTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/themesTitle">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonSkyTheme"
            style="@style/radioButtonStyle"
            android:text="@string/sky" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonLightTheme"
            style="@style/radioButtonStyle"
            android:text="@string/light" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonDarkTheme"
            style="@style/radioButtonStyle"
            android:text="@string/dark" />


    </RadioGroup>

    <Button
        android:id="@+id/cancelButton"
        style="@style/applyButtonStyle"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/applyButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/applyButton"
        style="@style/applyButtonStyle"
        android:text="@string/apply"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


</androidx.constraintlayout.widget.ConstraintLayout>